@@ -1,3 +1,8 @@
+2008-01-20  Badlop  <badlop@process-one.net>
+
+	* src/mod_ctlextra.erl: Allow to define group name with spaces
+	* README.txt: Likewise
+
 2007-11-14  Badlop  <badlop@ono.com>
 
 	* src/mod_ctlextra.erl: Updated to ejabberd SVN.
